@startuml

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> Order" {
    entity Order
    entity OrderItem
    class Shipment
    class Payment
    class SourceChannel
    class InteractionDate
    class AdditionalComment
}

package "<<aggregate>> Client" {
    entity Client
    class Address
    class BirthDate
    class Gender
}

package "<<aggregate>> Employee" {
    entity Employee
}

package "<<aggregate>> User" {
    entity User
    class Role
}

package "<<aggregate>> Product" {
    entity Product
    class UniqueInternalCode
    class Photo
    class Barcode
    class OptionalProductionCode
}

entity Product <<entity>> <<root>> {
    -<<VO>> ShortDescription
    -<<VO>> ExtendedDescription
    -<<VO>> TechnicalDescription
    -<<VO>> BrandName
    -<<VO>> Reference
    -<<VO>> Status /'Available, Temporarily Unavailable, Unavailable'/
    -<<VO>> Weight
    -<<VO>> Volume
    -<<VO>> PriceWithTaxes
    -<<VO>> PriceWithoutTaxes
}

class UniqueInternalCode <<(V,#FF8B40) value object>>
class Photo <<(V,#FF8B40) value object>>
class Barcode <<(V,#FF8B40) value object>>
class OptionalProductionCode <<(V,#FF8B40) value object>>

entity Order <<entity>> <<root>> {
    -<<VO>> OrderId /'automatically generated'/
    - CreatedOn /'automatically generated na hora do registo do sistema'/
    -<<VO>> BillingAddress
    -<<VO>> DeliveryAddress
    -<<VO>> TotalAmountWithoutTaxes
    -<<VO>> TotalAmountWithTaxes
    -<<VO>> TotalWeight
    -<<VO>> TotalVolume
    -<<VO>> Status /'(CONFIRM WITH CLIENT: registered, payment pending, being prepared on the warehouse, dispatched, delivered by carrier, received by customer)'/
}

class SourceChannel <<(V,#FF8B40) value object>>
class InteractionDate <<(V,#FF8B40) value object>>
class AdditionalComment <<(V,#FF8B40) value object>>

enum Shipment {
    -method
    -cost
}

enum Payment {
    -method
    -status
}

entity OrderItem <<entity>> {
    -itemQuantity
}

entity Client <<entity>> <<root>> {
    - <<VO>> ClientID
    - <<VO>> Name
    - <<VO>> VAT
    - <<VO>> Email
    - <<VO>> PhoneNumber
    /'- <<VO>> BirthDate'/ /'optional'/
    /'- <<VO>> Gender'/ /'optional'/
}

class BirthDate <<(V,#FF8B40) value object>> {}
class Gender <<(V,#FF8B40) value object>> {}

entity Employee <<entity>> <<root>> {
    - <<VO>> EmployeeID
}

entity User <<entity>> <<root>> {
    - <<VO>> Name
    - <<VO>> Password
    - <<VO>> Email
    - <<VO>> isActive
}

class Role <<(V,#FF8B40) value object>> {

}

Order --> "1" Client : ordered by
Order --> "1..*" Product : composed by
Order --> "1" Shipment : has info about
Order --> "1" Payment : has info about

Client --> "1..*" Address : has
Client --> "0..1" BirthDate
Client --> "0..1" Gender


User --> "1..*" Role
User "1" <-- Employee

Product --> "1" UniqueInternalCode : has
Product --> "1..*" Photo
Product --> "1" Barcode
Product --> "0..1" OptionalProductionCode

Order -> "1..*" OrderItem : composed by
OrderItem --> "1" Product : composed by

Order --> "0..1" Employee : associated with

Order --> "0..1" SourceChannel
Order --> "0..1" InteractionDate
Order --> "0..1" AdditionalComment

@enduml